Fix notifications button and logo overlap in header (#479)

--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -20,7 +20,7 @@
 .logoIcon {
   width: 100%;
   height: auto;
-  max-width: 250px;
+  max-width: min(40vw, 250px);
 }
 
 .headerRight {
